--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@types/express": "^5.0.3",
     "@types/ioredis": "^5.0.0",
     "@types/jsonwebtoken": "^9.0.10",
+    "@types/nodemailer": "^7.0.2",
     "@types/ws": "^8.18.1",
     "bullmq": "^5.61.0",
     "cookie-parser": "^1.4.7",
@@ -29,6 +30,7 @@
     "express": "^5.1.0",
     "ioredis": "^5.8.1",
     "jsonwebtoken": "^9.0.2",
+    "nodemailer": "^7.0.9",
     "ws": "^8.18.3",
     "zod": "^4.1.12"
   },
